mdapi/objects/Pagamento_Shadow__c/fields/Amount_Static__c.field-meta.xml
<CustomField>
    <fullName>Amount_Static__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>