mdapi/objects/Pagamento_Shadow__c/fields/Status_Static__c.field-meta.xml
<CustomField>
    <fullName>Status_Static__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>