mdapi/objects/Pagamento_Shadow__c/fields/Totali_Budget_Anno__c.field-meta.xml
<CustomField>
    <fullName>Totali_Budget_Anno__c</fullName>
    <label>Totali Budget Anno</label>
    <referenceTo>Totali_Budget_Anno__c</referenceTo>
    <relationshipLabel>Pagamenti Shadow</relationshipLabel>
    <relationshipName>Pagamenti_Shadow</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>